align the last nonshaping block

--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "725b4aa1",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "37907a81",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "6dd05502",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -396,62 +396,62 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -460,35 +460,31 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     1            3      1           3        3           1         2   \n",
-       "1     2            1      1           3        2           1         3   \n",
-       "2     1            0      1           3        0           2         3   \n",
-       "3     2            3      1           3        1           3         2   \n",
+       "0     2            3      1           3        0           1         3   \n",
+       "1     0            2      1           3        1           3         0   \n",
+       "2     1            3      1           3        2           0         3   \n",
+       "3     2            2      1           3        2           3         0   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          0        3           1         0          2  \n",
-       "1          0        3           1         0          2  \n",
-       "2          1        3           1         0          2  \n",
-       "3          0        3           1         0          2  "
+       "0          2        0           3         1          2  \n",
+       "1          2        0           3         1          2  \n",
+       "2          1        0           3         1          2  \n",
+       "3          1        0           3         1          2  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def generate_shaping_round(\n",
-    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs\n",
+    "    num_directions, iterations, correct_key_mapping, _, img_set, bs, last_nonshaping_block\n",
     "):\n",
     "    shaping_block = pd.DataFrame(\n",
     "        generate_shaping_block(num_directions, iterations[0], correct_key_mapping)\n",
     "    )\n",
-    "    nonshaping_block = pd.DataFrame(\n",
-    "        generate_non_shaping_block(\n",
-    "            num_directions, iterations[1], correct_key_mapping, stim_food_mapping\n",
-    "        )\n",
-    "    )\n",
+    "    nonshaping_block = last_nonshaping_block.copy()\n",
     "    shaping_block[\"block\"] = bs * 2\n",
     "    shaping_block[\"img_folder\"] = img_set + 1\n",
     "    nonshaping_block[\"block\"] = bs * 2 + 1\n",
@@ -496,7 +492,7 @@
     "    return pd.concat([shaping_block, nonshaping_block])\n",
     "\n",
     "def generate_shaping_round_v2(\n",
-    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs\n",
+    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs, last_nonshaping_block\n",
     "):\n",
     "    top_shaping_block = pd.DataFrame(\n",
     "        generate_top_shaping_block(iterations[0], stim_food_mapping)\n",
@@ -504,11 +500,7 @@
     "    shaping_block = pd.DataFrame(\n",
     "        generate_shaping_block(num_directions, iterations[1], correct_key_mapping)\n",
     "    )\n",
-    "    nonshaping_block = pd.DataFrame(\n",
-    "        generate_non_shaping_block(\n",
-    "            num_directions, iterations[2], correct_key_mapping, stim_food_mapping\n",
-    "        )\n",
-    "    )\n",
+    "    nonshaping_block = last_nonshaping_block.copy()\n",
     "    top_shaping_block[\"block\"] = bs * 3\n",
     "    top_shaping_block[\"img_folder\"] = img_set + 1\n",
     "    shaping_block[\"block\"] = bs * 3 + 1\n",
@@ -519,19 +511,27 @@
     "\n",
     "\n",
     "def generate_nonshaping_round(\n",
-    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs\n",
+    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs, last_nonshaping_block\n",
     "):\n",
     "    all_blocks = []\n",
+    "    last_block_num = 0\n",
     "    for b in range(len(iterations)):\n",
     "        nonshaping_block = pd.DataFrame(\n",
     "            generate_non_shaping_block(\n",
     "                num_directions, iterations[b], correct_key_mapping, stim_food_mapping\n",
     "            )\n",
     "        )\n",
-    "        nonshaping_block[\"block\"] = bs * len(iterations) + b\n",
+    "\n",
+    "        last_block_num = bs * len(iterations) + b\n",
+    "        nonshaping_block[\"block\"] = last_block_num\n",
     "        nonshaping_block[\"img_folder\"] = img_set + 1\n",
     "        all_blocks.append(nonshaping_block)\n",
-    "\n",
+    "    \n",
+    "    nonshaping_block = last_nonshaping_block.copy()\n",
+    "    nonshaping_block[\"block\"] = last_block_num+1\n",
+    "    nonshaping_block[\"img_folder\"] = img_set + 1\n",
+    "    all_blocks.append(nonshaping_block)\n",
+    "    \n",
     "    return pd.concat(all_blocks)\n",
     "\n",
     "\n",
@@ -540,14 +540,11 @@
     "version = \"v2\"\n",
     "NUM_ITER_PER_STIM = 13\n",
     "if version == \"v1\":\n",
-    "    iterations = [6, NUM_ITER_PER_STIM]\n",
+    "    iterations = [6]\n",
     "    shaping_func = generate_shaping_round\n",
     "elif version == \"v2\":\n",
-    "    iterations = [4, 4, NUM_ITER_PER_STIM]\n",
+    "    iterations = [4, 4]\n",
     "    shaping_func = generate_shaping_round_v2\n",
-    "else:\n",
-    "    iterations = [NUM_ITER_PER_STIM, NUM_ITER_PER_STIM]\n",
-    "    shaping_func = generate_shaping_round\n",
     "\n",
     "# potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
     "for seq_idx, set_comb in enumerate(combos_as_lists):\n",
@@ -557,6 +554,11 @@
     "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(\n",
     "            NUM_DIRECTIONS, NUM_FOOD\n",
     "        )\n",
+    "        last_nonshaping_block = pd.DataFrame(\n",
+    "            generate_non_shaping_block(\n",
+    "                NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping\n",
+    "            )\n",
+    "        )\n",
     "        shaping_blocks.append(\n",
     "            shaping_func(\n",
     "                NUM_DIRECTIONS,\n",
@@ -565,6 +567,7 @@
     "                stim_food_mapping,\n",
     "                img_set,\n",
     "                bs,\n",
+    "                last_nonshaping_block,\n",
     "            )\n",
     "        )\n",
     "        nonshaping_blocks.append(\n",
@@ -575,6 +578,7 @@
     "                stim_food_mapping,\n",
     "                img_set,\n",
     "                bs,\n",
+    "                last_nonshaping_block,\n",
     "            )\n",
     "        )\n",
     "\n",
