--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v2/\"\n",
+    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v3/\"\n",
     "\n",
     "ALL_DIRECTIONS = [\"top\", \"bottom\", \"left\", \"right\"]\n",
     "OUTPUT_COL_ORDER = [\n",
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -396,33 +396,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -430,29 +430,29 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -460,19 +460,19 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     2            3      1           3        0           1         3   \n",
-       "1     0            2      1           3        1           3         0   \n",
-       "2     1            3      1           3        2           0         3   \n",
-       "3     2            2      1           3        2           3         0   \n",
+       "0     0            3      1           3        1           0         3   \n",
+       "1     2            1      1           3        0           1         3   \n",
+       "2     1            3      1           3        3           1         2   \n",
+       "3     3            2      1           3        2           1         3   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          2        0           3         1          2  \n",
-       "1          2        0           3         1          2  \n",
-       "2          1        0           3         1          2  \n",
-       "3          1        0           3         1          2  "
+       "0          2        0           1         2          3  \n",
+       "1          2        0           1         2          3  \n",
+       "2          0        0           1         2          3  \n",
+       "3          0        0           1         2          3  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,14 +537,14 @@
     "\n",
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
-    "version = \"v2\"\n",
+    "version = \"v3\"\n",
     "NUM_ITER_PER_STIM = 13\n",
-    "if version == \"v1\":\n",
-    "    iterations = [6]\n",
-    "    shaping_func = generate_shaping_round\n",
-    "elif version == \"v2\":\n",
+    "if version == \"v2\":\n",
     "    iterations = [4, 4]\n",
     "    shaping_func = generate_shaping_round_v2\n",
+    "else:\n",
+    "    iterations = [6]\n",
+    "    shaping_func = generate_shaping_round\n",
     "\n",
     "# potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
     "for seq_idx, set_comb in enumerate(combos_as_lists):\n",
