--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
     "            )\n",
     "        )\n",
     "\n",
-    "        last_block_num = bs * len(iterations) + b\n",
+    "        last_block_num = bs * (len(iterations)+1) + b\n",
     "        nonshaping_block[\"block\"] = last_block_num\n",
     "        nonshaping_block[\"img_folder\"] = img_set + 1\n",
     "        all_blocks.append(nonshaping_block)\n",
