--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v3/\"\n",
+    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v2/\"\n",
     "\n",
     "ALL_DIRECTIONS = [\"top\", \"bottom\", \"left\", \"right\"]\n",
     "OUTPUT_COL_ORDER = [\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -310,12 +310,29 @@
     "\n",
     "    base_array = np.random.permutation(num_food)\n",
     "    stim_food_mapping = {i: f for i, f in enumerate(base_array)}\n",
-    "    return correct_key_mapping, stim_food_mapping"
+    "    return correct_key_mapping, stim_food_mapping\n",
+    "\n",
+    "\n",
+    "def get_key_mapping_by_level(level):\n",
+    "    if level == \"easy\":\n",
+    "        seq = [0, 1, 2, 3]\n",
+    "    elif level == \"medium\":\n",
+    "        seq = [3, 0, 1, 2]\n",
+    "    elif level == \"hard\":\n",
+    "        seq = [0, 2, 3, 1]\n",
+    "    else:\n",
+    "        raise ValueError(f\"Invalid level: {level}\")\n",
+    "\n",
+    "    correct_key_mapping = {}\n",
+    "    for i, k in enumerate(seq):\n",
+    "        correct_key_mapping[ALL_DIRECTIONS[i]] = k\n",
+    "\n",
+    "    return correct_key_mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "6dd05502",
    "metadata": {},
    "outputs": [
@@ -323,8 +340,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]\n",
-      "[[0, 1], [0, 2], [0, 3], [1, 2], [1, 3], [2, 3]]\n"
+      "[(0,), (1,), (2,), (3,)]\n",
+      "[[0], [1], [2], [3]]\n"
      ]
     }
    ],
@@ -334,7 +351,8 @@
     "# Generate all combinations of 2 items from [0, 1, 2, 3]\n",
     "NUM_IMG_FOLDERS = 4\n",
     "items = np.arange(NUM_IMG_FOLDERS)\n",
-    "combos = list(combinations(items, 2))\n",
+    "num_villages = 1\n",
+    "combos = list(combinations(items, num_villages))\n",
     "print(combos)\n",
     "# Output: [(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]\n",
     "\n",
@@ -354,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -396,63 +414,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -460,19 +478,19 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     0            3      1           3        1           0         3   \n",
-       "1     2            1      1           3        0           1         3   \n",
-       "2     1            3      1           3        3           1         2   \n",
-       "3     3            2      1           3        2           1         3   \n",
+       "0     3            1      1           4        3           1         2   \n",
+       "1     0            2      1           4        2           0         3   \n",
+       "2     1            3      1           4        0           1         3   \n",
+       "3     3            1      1           4        1           3         2   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          2        0           1         2          3  \n",
-       "1          2        0           1         2          3  \n",
-       "2          0        0           1         2          3  \n",
-       "3          0        0           1         2          3  "
+       "0          0        3           0         1          2  \n",
+       "1          1        3           0         1          2  \n",
+       "2          2        3           0         1          2  \n",
+       "3          0        3           0         1          2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,15 +555,16 @@
     "\n",
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
-    "version = \"v3\"\n",
+    "version = \"v2\"\n",
     "NUM_ITER_PER_STIM = 13\n",
     "if version == \"v2\":\n",
-    "    iterations = [4, 4]\n",
-    "    shaping_func = generate_shaping_round_v2\n",
-    "else:\n",
+    "    iterations = [NUM_ITER_PER_STIM]\n",
+    "    shaping_func = generate_shaping_round\n",
+    "elif version == \"v3\":\n",
     "    iterations = [6]\n",
     "    shaping_func = generate_shaping_round\n",
     "\n",
+    "level = 'medium'\n",
     "# potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
     "for seq_idx, set_comb in enumerate(combos_as_lists):\n",
     "    shaping_blocks = []\n",
@@ -554,6 +573,7 @@
     "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(\n",
     "            NUM_DIRECTIONS, NUM_FOOD\n",
     "        )\n",
+    "        correct_key_mapping = get_key_mapping_by_level(level)\n",
     "        last_nonshaping_block = pd.DataFrame(\n",
     "            generate_non_shaping_block(\n",
     "                NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping\n",
@@ -585,10 +605,10 @@
     "    for name, data in zip(\n",
     "        [\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]\n",
     "    ):\n",
-    "        concated_data = pd.concat(data)\n",
+    "        concated_data = pd.concat(data).reset_index(drop=True)\n",
     "        concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
     "        concated_data = concated_data[OUTPUT_COL_ORDER]\n",
-    "        concated_data.to_csv(f\"{seq_folder}/{name}{seq_idx}_learning.csv\", index=False)\n",
+    "        concated_data.to_csv(f\"{seq_folder}/{name}_{level}{seq_idx}_learning.csv\", index=False)\n",
     "\n",
     "concated_data.head(4)"
    ]
