--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v2/\"\n",
+    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v4/\"\n",
     "\n",
     "ALL_DIRECTIONS = [\"top\", \"bottom\", \"left\", \"right\"]\n",
     "OUTPUT_COL_ORDER = [\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "6dd05502",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -414,63 +414,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -478,19 +478,19 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     3            1      1           4        3           1         2   \n",
-       "1     0            2      1           4        2           0         3   \n",
-       "2     1            3      1           4        0           1         3   \n",
-       "3     3            1      1           4        1           3         2   \n",
+       "0     0            3      1           4        2           1         3   \n",
+       "1     2            1      1           4        2           3         1   \n",
+       "2     0            2      1           4        2           3         1   \n",
+       "3     3            3      1           4        3           1         2   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          0        3           0         1          2  \n",
-       "1          1        3           0         1          2  \n",
-       "2          2        3           0         1          2  \n",
-       "3          0        3           0         1          2  "
+       "0          0        0           2         3          1  \n",
+       "1          0        0           2         3          1  \n",
+       "2          0        0           2         3          1  \n",
+       "3          0        0           2         3          1  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
     "\n",
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
-    "version = \"v2\"\n",
+    "version = \"v4\"\n",
     "NUM_ITER_PER_STIM = 13\n",
     "if version == \"v2\":\n",
     "    iterations = [NUM_ITER_PER_STIM]\n",
@@ -563,8 +563,11 @@
     "elif version == \"v3\":\n",
     "    iterations = [6]\n",
     "    shaping_func = generate_shaping_round\n",
+    "elif version == \"v4\":\n",
+    "    iterations = [20]\n",
+    "    shaping_func = generate_shaping_round\n",
     "\n",
-    "level = 'medium'\n",
+    "level = 'hard'\n",
     "# potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
     "for seq_idx, set_comb in enumerate(combos_as_lists):\n",
     "    shaping_blocks = []\n",
