--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "725b4aa1",
    "metadata": {},
    "outputs": [],
@@ -21,18 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "37907a81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v4/\"\n",
+    "seq_folder = \"/Users/ccnlab/Development/sequences/shaping/v5/\"\n",
     "\n",
     "ALL_DIRECTIONS = [\"top\", \"bottom\", \"left\", \"right\"]\n",
     "OUTPUT_COL_ORDER = [\n",
     "    \"stim\",\n",
     "    \"correct_key\",\n",
     "    \"block\",\n",
+    "    \"set_size\",\n",
     "    \"img_folder\",\n",
     "    \"top_img\",\n",
     "    \"bottom_img\",\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -266,6 +267,7 @@
     "    for k, v in correct_key_mapping.items():\n",
     "        seq_data[f\"{k}_key\"] = [v] * len(correct_dir_seq)\n",
     "\n",
+    "    seq_data[\"set_size\"] = [len(stim_food_mapping)]*len(correct_dir_seq)\n",
     "    return seq_data\n",
     "\n",
     "\n",
@@ -302,14 +304,20 @@
     "    return arr\n",
     "\n",
     "\n",
-    "def generate_key_food_mapping(num_directions, num_food):\n",
+    "def generate_key_food_mapping(num_directions, num_food, num_chars=4):\n",
     "    base_array = np.random.permutation(num_directions)\n",
     "    correct_key_mapping = {}\n",
     "    for i, k in enumerate(base_array):\n",
     "        correct_key_mapping[ALL_DIRECTIONS[i]] = k\n",
-    "\n",
+    "   \n",
     "    base_array = np.random.permutation(num_food)\n",
     "    stim_food_mapping = {i: f for i, f in enumerate(base_array)}\n",
+    "    other_chars = num_chars - num_food\n",
+    "     # Draw 2 additional numbers from range 1 to num_food\n",
+    "    additional_foods= np.random.choice(range(num_food), size=other_chars, replace=False)\n",
+    "    for i, f in enumerate(additional_foods):\n",
+    "        stim_food_mapping[num_food + i] = f\n",
+    "    \n",
     "    return correct_key_mapping, stim_food_mapping\n",
     "\n",
     "\n",
@@ -317,9 +325,9 @@
     "    if level == \"easy\":\n",
     "        seq = [0, 1, 2, 3]\n",
     "    elif level == \"medium\":\n",
-    "        seq = [3, 0, 1, 2]\n",
+    "        seq = [3, 0, 1, 2] #[2, 1, 0, 3] #\"top\", \"bottom\", \"left\", \"right\"\n",
     "    elif level == \"hard\":\n",
-    "        seq = [0, 2, 3, 1]\n",
+    "        seq = [0, 2, 3, 1] #[1, 3, 2, 0]\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid level: {level}\")\n",
     "\n",
@@ -332,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "6dd05502",
    "metadata": {},
    "outputs": [
@@ -340,8 +348,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0,), (1,), (2,), (3,)]\n",
-      "[[0], [1], [2], [3]]\n"
+      "[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]\n",
+      "[[0, 1], [0, 2], [0, 3], [1, 2], [1, 3], [2, 3]]\n"
      ]
     }
    ],
@@ -351,7 +359,7 @@
     "# Generate all combinations of 2 items from [0, 1, 2, 3]\n",
     "NUM_IMG_FOLDERS = 4\n",
     "items = np.arange(NUM_IMG_FOLDERS)\n",
-    "num_villages = 1\n",
+    "num_villages = 2\n",
     "combos = list(combinations(items, num_villages))\n",
     "print(combos)\n",
     "# Output: [(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]\n",
@@ -372,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -400,6 +408,7 @@
        "      <th>stim</th>\n",
        "      <th>correct_key</th>\n",
        "      <th>block</th>\n",
+       "      <th>set_size</th>\n",
        "      <th>img_folder</th>\n",
        "      <th>top_img</th>\n",
        "      <th>bottom_img</th>\n",
@@ -414,14 +423,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -430,13 +440,14 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -444,14 +455,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -459,14 +471,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -477,34 +490,37 @@
        "</div>"
       ],
       "text/plain": [
-       "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     0            3      1           4        2           1         3   \n",
-       "1     2            1      1           4        2           3         1   \n",
-       "2     0            2      1           4        2           3         1   \n",
-       "3     3            3      1           4        3           1         2   \n",
+       "   stim  correct_key  block  set_size  img_folder  top_img  bottom_img  \\\n",
+       "0     1            0      1         4           3        3           0   \n",
+       "1     2            2      1         4           3        1           2   \n",
+       "2     3            3      1         4           3        1           2   \n",
+       "3     2            0      1         4           3        2           0   \n",
        "\n",
-       "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          0        0           2         3          1  \n",
-       "1          0        0           2         3          1  \n",
-       "2          0        0           2         3          1  \n",
-       "3          0        0           2         3          1  "
+       "   left_img  right_img  top_key  bottom_key  left_key  right_key  \n",
+       "0         2          1        0           2         3          1  \n",
+       "1         0          3        0           2         3          1  \n",
+       "2         0          3        0           2         3          1  \n",
+       "3         1          3        0           2         3          1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def generate_shaping_round(\n",
-    "    num_directions, iterations, correct_key_mapping, _, img_set, bs, last_nonshaping_block\n",
+    "    num_directions, iterations, correct_key_mapping, stim_food_mapping, img_set, bs, last_nonshaping_block\n",
     "):\n",
     "    shaping_block = pd.DataFrame(\n",
     "        generate_shaping_block(num_directions, iterations[0], correct_key_mapping)\n",
     "    )\n",
-    "    nonshaping_block = last_nonshaping_block.copy()\n",
+    "    \n",
     "    shaping_block[\"block\"] = bs * 2\n",
     "    shaping_block[\"img_folder\"] = img_set + 1\n",
+    "    shaping_block[\"set_size\"] = len(stim_food_mapping)\n",
+    "\n",
+    "    nonshaping_block = last_nonshaping_block.copy()\n",
     "    nonshaping_block[\"block\"] = bs * 2 + 1\n",
     "    nonshaping_block[\"img_folder\"] = img_set + 1\n",
     "    return pd.concat([shaping_block, nonshaping_block])\n",
@@ -555,17 +571,16 @@
     "\n",
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
-    "version = \"v4\"\n",
-    "NUM_ITER_PER_STIM = 13\n",
+    "version = \"v5\"\n",
+    "NUM_ITER_PER_STIM = 18\n",
     "if version == \"v2\":\n",
-    "    iterations = [NUM_ITER_PER_STIM]\n",
-    "    shaping_func = generate_shaping_round\n",
+    "    iterations = [13]\n",
     "elif version == \"v3\":\n",
     "    iterations = [6]\n",
-    "    shaping_func = generate_shaping_round\n",
     "elif version == \"v4\":\n",
     "    iterations = [20]\n",
-    "    shaping_func = generate_shaping_round\n",
+    "elif version == \"v5\":\n",
+    "    iterations = [12] \n",
     "\n",
     "level = 'hard'\n",
     "# potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
@@ -583,7 +598,7 @@
     "            )\n",
     "        )\n",
     "        shaping_blocks.append(\n",
-    "            shaping_func(\n",
+    "            generate_shaping_round(\n",
     "                NUM_DIRECTIONS,\n",
     "                iterations,\n",
     "                correct_key_mapping,\n",
@@ -611,7 +626,7 @@
     "        concated_data = pd.concat(data).reset_index(drop=True)\n",
     "        concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
     "        concated_data = concated_data[OUTPUT_COL_ORDER]\n",
-    "        concated_data.to_csv(f\"{seq_folder}/{name}_{level}{seq_idx}_learning.csv\", index=False)\n",
+    "        #concated_data.to_csv(f\"{seq_folder}/{name}_{level}{seq_idx}_learning.csv\", index=False)\n",
     "\n",
     "concated_data.head(4)"
    ]
