--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "id": "725b4aa1",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "id": "37907a81",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,6 @@
     "    \"stim\",\n",
     "    \"correct_key\",\n",
     "    \"block\",\n",
-    "    \"set_size\",\n",
     "    \"img_folder\",\n",
     "    \"top_img\",\n",
     "    \"bottom_img\",\n",
@@ -55,6 +54,7 @@
     "    \"bottom_key\",\n",
     "    \"left_key\",\n",
     "    \"right_key\",\n",
+    "    \"set_size\",    \n",
     "]"
    ]
   },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 91,
    "id": "6dd05502",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "47a38590",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 93,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n",
       "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n",
       "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n"
      ]
@@ -450,7 +449,6 @@
        "      <th>stim</th>\n",
        "      <th>correct_key</th>\n",
        "      <th>block</th>\n",
-       "      <th>set_size</th>\n",
        "      <th>img_folder</th>\n",
        "      <th>top_img</th>\n",
        "      <th>bottom_img</th>\n",
@@ -460,92 +458,93 @@
        "      <th>bottom_key</th>\n",
        "      <th>left_key</th>\n",
        "      <th>right_key</th>\n",
+       "      <th>set_size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   stim  correct_key  block  set_size  img_folder  top_img  bottom_img  \\\n",
-       "0     1            3      1         6           6        3           1   \n",
-       "1     0            2      1         6           6        1           3   \n",
-       "2     5            1      1         6           6        1           0   \n",
-       "3     4            0      1         6           6        0           1   \n",
+       "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
+       "0     0            0      1           6        2           1         0   \n",
+       "1     5            1      1           6        0           2         3   \n",
+       "2     4            0      1           6        2           0         1   \n",
+       "3     3            1      1           6        1           0         2   \n",
        "\n",
-       "   left_img  right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0         0          2        0           2         3          1  \n",
-       "1         2          0        0           2         3          1  \n",
-       "2         3          2        0           2         3          1  \n",
-       "3         3          2        0           2         3          1  "
+       "   right_img  top_key  bottom_key  left_key  right_key  set_size  \n",
+       "0          3        0           2         3          1         6  \n",
+       "1          1        0           2         3          1         6  \n",
+       "2          3        0           2         3          1         6  \n",
+       "3          3        0           2         3          1         6  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
