update testing img folder

--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
     "            NUM_DIRECTIONS, NUM_TEST_ITER, test_correct_key_mapping, test_stim_food_mapping\n",
     "        ))\n",
     "        testing_data[\"block\"] = 1\n",
-    "        testing_data[\"img_folder\"] = seq_idx + 1\n",
+    "        testing_data[\"img_folder\"] = set_comb[0] + 1\n",
     "        testing_data[\"set_size\"] = len(test_stim_food_mapping)\n",
     "        testing_data = testing_data[OUTPUT_COL_ORDER]\n",
     "        testing_data.to_csv(f\"{seq_folder}/{level}{seq_idx}_testing.csv\", index=False)\n",
