fix shaping iter

--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "725b4aa1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "37907a81",
    "metadata": {},
    "outputs": [],
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -186,9 +177,9 @@
     "    )\n",
     "    seq_data[\"stim\"] = stim_seq\n",
     "    all_food_indexes = np.array([0, 1, 2, 3])\n",
-    "    for i, dir in enumerate(correct_dir_seq):\n",
-    "        correct_key = correct_key_mapping[ALL_DIRECTIONS[dir]]\n",
-    "        stim_food_pos = dir\n",
+    "    for i, k_dir in enumerate(correct_dir_seq):\n",
+    "        correct_key = correct_key_mapping[ALL_DIRECTIONS[k_dir]]\n",
+    "        stim_food_pos = k_dir\n",
     "        stim_food = stim_food_mapping[stim_seq[i]]\n",
     "        base = swap_by_indices(all_food_indexes, stim_food, stim_food_pos)\n",
     "        food_map = shuffle_with_mask(\n",
@@ -246,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "6dd05502",
    "metadata": {},
    "outputs": [
@@ -286,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "47a38590",
    "metadata": {},
    "outputs": [],
@@ -371,7 +362,7 @@
     "                num_dir, last_num_stim_iter, correct_key_mapping, stim_food_mapping\n",
     "            )\n",
     "        )\n",
-    "        iterations = [iter_by_setsz[set_size_comb[bs]]]\n",
+    "        iterations = [iter_by_setsz[num_dir]]\n",
     "        shaping_blocks.append(\n",
     "            generate_shaping_round(\n",
     "                num_dir,\n",
@@ -383,6 +374,7 @@
     "                last_nonshaping_block,\n",
     "            )\n",
     "        )\n",
+    "        iterations = [iter_by_setsz[set_size_comb[bs]]]\n",
     "        nonshaping_blocks.append(\n",
     "            generate_nonshaping_round(\n",
     "                num_dir,\n",
@@ -413,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -421,8 +413,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n",
-      "Warning: Could not find arrangement without consecutive key_dir after 9000 attempts\n"
+      "generating for seq_idx medium 0\n",
+      "generating for seq_idx medium 1\n",
+      "generating for seq_idx medium 2\n",
+      "generating for seq_idx medium 3\n",
+      "generating for seq_idx medium 4\n",
+      "generating for seq_idx medium 5\n",
+      "generating for seq_idx hard 0\n",
+      "generating for seq_idx hard 1\n",
+      "generating for seq_idx hard 2\n",
+      "generating for seq_idx hard 3\n",
+      "generating for seq_idx hard 4\n",
+      "generating for seq_idx hard 5\n"
      ]
     },
     {
@@ -464,14 +466,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -481,11 +483,11 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -496,13 +498,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
@@ -512,14 +514,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
@@ -532,19 +534,19 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     0            0      1           6        2           1         0   \n",
-       "1     5            1      1           6        0           2         3   \n",
-       "2     4            0      1           6        2           0         1   \n",
-       "3     3            1      1           6        1           0         2   \n",
+       "0     5            1      1           3        2           3         1   \n",
+       "1     5            2      1           3        2           0         3   \n",
+       "2     0            3      1           3        0           1         2   \n",
+       "3     1            0      1           3        1           0         3   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  set_size  \n",
-       "0          3        0           2         3          1         6  \n",
+       "0          0        0           2         3          1         6  \n",
        "1          1        0           2         3          1         6  \n",
        "2          3        0           2         3          1         6  \n",
-       "3          3        0           2         3          1         6  "
+       "3          2        0           2         3          1         6  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,6 +569,7 @@
     "for level in ['medium', 'hard']:\n",
     "    # potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
     "    for seq_idx, set_comb in enumerate(combos_as_lists):\n",
+    "        print('generating for seq_idx', level, seq_idx)\n",
     "        shaping_blocks, nonshaping_blocks, test_correct_key_mapping, test_stim_food_mapping = generate_learning_round(\n",
     "            set_comb, set_size_list[seq_idx], level, iter_by_setsz, NUM_ITER_PER_STIM, NUM_DIRECTIONS, NUM_FOOD\n",
     "        )\n",
