add self paced seq

--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "725b4aa1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "37907a81",
    "metadata": {},
    "outputs": [],
@@ -639,6 +639,92 @@
     "    stim_data = block_data[block_data['stim'] == stim]\n",
     "    key_counts = stim_data['correct_key'].value_counts().sort_index()\n",
     "    print(f\"Stimulus {stim}: {dict(key_counts)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d0f7b4d",
+   "metadata": {},
+   "source": [
+    "# Self-paced sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e1039824",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'top', 2: 'bottom', 3: 'left', 1: 'right'}\n",
+      "0 1\n",
+      "right\n",
+      "1 0\n",
+      "top\n",
+      "2 3\n",
+      "left\n",
+      "3 1\n",
+      "right\n"
+     ]
+    }
+   ],
+   "source": [
+    "level = \"hard\"\n",
+    "seq_idx = 0\n",
+    "testing_data = pd.read_csv(f\"{seq_folder}/{level}{seq_idx}_testing.csv\")\n",
+    "\n",
+    "seq_data = {\n",
+    "    \"stim\": [],\n",
+    "    \"correct_key\": [],\n",
+    "    \"type\": [],\n",
+    "    \"set_size\": [],\n",
+    "    \"img_folder\": [],\n",
+    "}\n",
+    "\n",
+    "key_dir_mapping = {\n",
+    "    testing_data.top_key.unique()[0]: \"top\",\n",
+    "    testing_data.bottom_key.unique()[0]: \"bottom\",\n",
+    "    testing_data.left_key.unique()[0]: \"left\",\n",
+    "    testing_data.right_key.unique()[0]: \"right\",\n",
+    "}\n",
+    "print(key_dir_mapping)\n",
+    "food_mapping = {}\n",
+    "# Fix the groupby issue by getting the first row for each stimulus\n",
+    "for stim, group in testing_data.groupby(\"stim\"):\n",
+    "    row = group.iloc[0]  # Get the first row of each group\n",
+    "\n",
+    "    print(stim, row.correct_key)\n",
+    "    corr_dir = key_dir_mapping[row.correct_key]\n",
+    "    print(corr_dir)\n",
+    "    \n",
+    "    food_mapping[stim] =  row[f\"{corr_dir}_img\"]\n",
+    "\n",
+    "for s, c in food_mapping.items():\n",
+    "    seq_data[\"stim\"].append(s)\n",
+    "    seq_data[\"correct_key\"].append(c)\n",
+    "    seq_data[\"type\"].append(\"food\")\n",
+    "    seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
+    "    seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
+    "\n",
+    "key_dir_list = [\n",
+    "    testing_data.top_key.unique()[0],\n",
+    "    testing_data.bottom_key.unique()[0],\n",
+    "    testing_data.left_key.unique()[0],\n",
+    "    testing_data.right_key.unique()[0],\n",
+    "]\n",
+    "for i, key_dir in enumerate(key_dir_list):\n",
+    "    seq_data[\"stim\"].append(i)\n",
+    "    seq_data[\"correct_key\"].append(key_dir)\n",
+    "    seq_data[\"type\"].append(\"direction\")\n",
+    "    seq_data[\"set_size\"].append(testing_data.set_size.unique()[0])\n",
+    "    seq_data[\"img_folder\"].append(testing_data.img_folder.unique()[0])\n",
+    "\n",
+    "seq_data = pd.DataFrame(seq_data)\n",
+    "seq_data = seq_data[['stim', 'correct_key', 'img_folder',  'set_size', 'type']]\n",
+    "seq_data.to_csv(f\"{seq_folder}/self-paced_{level}{seq_idx}_testing.csv\", index=False)\n"
    ]
   },
   {
